--- a/Assets/Tests/EditMode/Tests.EditMode.asmdef
+++ b/Assets/Tests/EditMode/Tests.EditMode.asmdef
@@ -1,19 +1,18 @@
 {
-    "name": "Tests.EditMode",
-    "rootNamespace": "",
-    "references": [
-        "Assembly-CSharp",
-        "Testables"
-    ],
-    "includePlatforms": [
-        "Editor"
-    ],
-    "excludePlatforms": [],
-    "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+  "name": "Tests.EditMode",
+  "rootNamespace": "",
+  "references": [
+    "Assembly-CSharp",
+    "Testables"
+  ],
+  "includePlatforms": [ "Editor" ],
+  "excludePlatforms": [],
+  "allowUnsafeCode": false,
+  "overrideReferences": false,
+  "precompiledReferences": [],
+  "autoReferenced": true,
+  "defineConstraints": [],
+  "versionDefines": [],
+  "noEngineReferences": false,
+  "optionalUnityReferences": [ "TestAssemblies" ]
 }
