--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,2 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages />
+<packages>
+  <package id="Google.Protobuf" version="3.32.0" manuallyInstalled="true" />
+  <package id="Grpc.Core.Api" version="2.71.0" />
+  <package id="Grpc.Net.Client" version="2.71.0" manuallyInstalled="true" />
+  <package id="Grpc.Net.Client.Web" version="2.71.0" manuallyInstalled="true" />
+  <package id="Grpc.Net.Common" version="2.71.0" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.1" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" />
+</packages>
