--- a/Assets/Scripts/Testables/Testables.asmdef
+++ b/Assets/Scripts/Testables/Testables.asmdef
@@ -2,7 +2,9 @@
     "name": "Testables",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "Unity.TextMeshPro",
+        "Chat.Client.Runtime",
+        "Chat.Proto.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
